--- a/solidity/package.json
+++ b/solidity/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "solidity",
+  "name": "app_name",
   "version": "0.0.1",
   "description": "",
+  "main": "Gruntfile.js",
   "scripts": {
-    "test": "embark test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "homepage": "",
-  "devDependencies": {}
+  "dependencies": {
+    "react": "^16.3.2",
+    "react-bootstrap": "0.32.1",
+    "react-dom": "^16.3.2"
+  }
 }
