--- a/solidity/package.json
+++ b/solidity/package.json
@@ -21,6 +21,7 @@
     "ethers": "^4.0.27",
     "ganache-cli": "^6.4.1",
     "openzeppelin-test-helpers": "^0.2.0",
+    "truffle-assertions": "^0.8.0",
     "truper": "0.0.2"
   }
 }
