--- a/solidity/package.json
+++ b/solidity/package.json
@@ -24,5 +24,8 @@
     "openzeppelin-test-helpers": "^0.2.0",
     "truffle-assertions": "^0.8.0",
     "truper": "0.0.2"
+  },
+  "devDependencies": {
+    "solidity-coverage": "^0.5.11"
   }
 }
